example/tests/compile_errors/bad_response_trait.stderr
error[E0599]: no method named `into_not_found` found for type `i32` in the current scope
  --> tests/compile_errors/bad_response_trait.rs:10:11
   |
10 |     12i32.into_not_found()
   |           ^^^^^^^^^^^^^^ method not found in `i32`

error[E0599]: no function or associated item named `into_not_found` found for type `i32` in the current scope
  --> tests/compile_errors/bad_response_trait.rs:16:10
   |
16 |     i32::into_not_found(12i32)
   |          ^^^^^^^^^^^^^^ function or associated item not found in `i32`

error[E0599]: no variant or associated item named `NotFound` found for enum `WrongStatus3Responses` in the current scope
  --> tests/compile_errors/bad_response_trait.rs:22:28
   |
20 |   #[autoroute(GET, path="/hello", responses=[(IM_A_TEAPOT, body=i32, description="hello")])]
   |  ___________________________________________-
21 | | pub fn wrong_status_3() -> WrongStatus3Responses {
   | |___- variant or associated item `NotFound` not found for this enum
22 |       WrongStatus3Responses::NotFound(12i32)
   |                              ^^^^^^^^ variant or associated item not found in `WrongStatus3Responses`

error[E0599]: no method named `into_im_a_teapot` found for type `u32` in the current scope
  --> tests/compile_errors/bad_response_trait.rs:28:11
   |
28 |     12u32.into_im_a_teapot()
   |           ^^^^^^^^^^^^^^^^ method not found in `u32`

error[E0599]: no function or associated item named `into_im_a_teapot` found for type `u32` in the current scope
  --> tests/compile_errors/bad_response_trait.rs:34:10
   |
34 |     u32::into_im_a_teapot(12u32)
   |          ^^^^^^^^^^^^^^^^ function or associated item not found in `u32`

error[E0308]: mismatched types
  --> tests/compile_errors/bad_response_trait.rs:40:34
   |
40 |     BadType3Responses::ImATeapot(12u32)
   |     ---------------------------- ^^^^^ expected `i32`, found `u32`
   |     |
   |     arguments to this enum variant are incorrect
   |
note: tuple variant defined here
  --> tests/compile_errors/bad_response_trait.rs:38:44
   |
38 | #[autoroute(GET, path="/hello", responses=[(IM_A_TEAPOT, body=i32, description="hello")])]
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: change the type of the numeric literal from `u32` to `i32`
   |
40 -     BadType3Responses::ImATeapot(12u32)
40 +     BadType3Responses::ImATeapot(12i32)
   |
